@@ -45,24 +45,24 @@ public class TestACARSFlightReport extends AbstractBeanTestCase {
         checkProperty("startTime", new Date());
         checkProperty("takeoffTime", new Date());
         checkProperty("taxiTime", new Date());
-        checkProperty("gateFuel", new Integer(15000));
-        checkProperty("landingFuel", new Integer(15000));
-        checkProperty("takeoffFuel", new Integer(15000));
-        checkProperty("taxiFuel", new Integer(15000));
-        checkProperty("gateWeight", new Integer(15000));
-        checkProperty("landingWeight", new Integer(15000));
-        checkProperty("taxiWeight", new Integer(15000));
-        checkProperty("takeoffWeight", new Integer(15000));
-        checkProperty("landingDistance", new Integer(23));
-        checkProperty("takeoffDistance", new Integer(23));
-        checkProperty("takeoffSpeed", new Integer(123));
-        checkProperty("landingSpeed", new Integer(113));
-        checkProperty("landingVSpeed", new Integer(-123));
+        checkProperty("gateFuel", Integer.valueOf(15000));
+        checkProperty("landingFuel", Integer.valueOf(15000));
+        checkProperty("takeoffFuel", Integer.valueOf(15000));
+        checkProperty("taxiFuel", Integer.valueOf(15000));
+        checkProperty("gateWeight", Integer.valueOf(15000));
+        checkProperty("landingWeight", Integer.valueOf(15000));
+        checkProperty("taxiWeight", Integer.valueOf(15000));
+        checkProperty("takeoffWeight", Integer.valueOf(15000));
+        checkProperty("landingDistance", Integer.valueOf(23));
+        checkProperty("takeoffDistance", Integer.valueOf(23));
+        checkProperty("takeoffSpeed", Integer.valueOf(123));
+        checkProperty("landingSpeed", Integer.valueOf(113));
+        checkProperty("landingVSpeed", Integer.valueOf(-123));
         checkProperty("landingN1", new Double(23.2));
         checkProperty("takeoffN1", new Double(93.1));
-        checkProperty("time1X", new Integer(421));
-        checkProperty("time2X", new Integer(422));
-        checkProperty("time4X", new Integer(424));
+        checkProperty("time1X", Integer.valueOf(421));
+        checkProperty("time2X", Integer.valueOf(422));
+        checkProperty("time4X", Integer.valueOf(424));
     }
     
     @Test public void testTimeCalculation() {
@@ -77,26 +77,26 @@ public class TestACARSFlightReport extends AbstractBeanTestCase {
     }
     
     @Test public void testValidation() {
-        validateInput("gateWeight", new Integer(0), IllegalArgumentException.class);
-        validateInput("gateFuel", new Integer(-1), IllegalArgumentException.class);
-        validateInput("landingWeight", new Integer(-1), IllegalArgumentException.class);
-        validateInput("landingSpeed", new Integer(-1), IllegalArgumentException.class);
-        validateInput("landingVSpeed", new Integer(1), IllegalArgumentException.class);
-        validateInput("landingFuel", new Integer(-1), IllegalArgumentException.class);
-        validateInput("takeoffWeight", new Integer(0), IllegalArgumentException.class);
-        validateInput("takeoffSpeed", new Integer(-1), IllegalArgumentException.class);
-        validateInput("takeoffFuel", new Integer(-1), IllegalArgumentException.class);
-        validateInput("taxiWeight", new Integer(0), IllegalArgumentException.class);
-        validateInput("taxiFuel", new Integer(-1), IllegalArgumentException.class);
+        validateInput("gateWeight", Integer.valueOf(0), IllegalArgumentException.class);
+        validateInput("gateFuel", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("landingWeight", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("landingSpeed", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("landingVSpeed", Integer.valueOf(1), IllegalArgumentException.class);
+        validateInput("landingFuel", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("takeoffWeight", Integer.valueOf(0), IllegalArgumentException.class);
+        validateInput("takeoffSpeed", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("takeoffFuel", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("taxiWeight", Integer.valueOf(0), IllegalArgumentException.class);
+        validateInput("taxiFuel", Integer.valueOf(-1), IllegalArgumentException.class);
         validateInput("landingN1", new Double(-1), IllegalArgumentException.class);
         validateInput("landingN1", new Double(141), IllegalArgumentException.class);
         validateInput("takeoffN1", new Double(-1), IllegalArgumentException.class);
         validateInput("takeoffN1", new Double(141), IllegalArgumentException.class);
-        validateInput("takeoffDistance", new Integer(-1), IllegalArgumentException.class);
-        validateInput("landingDistance", new Integer(-1), IllegalArgumentException.class);
-        validateInput("time1X", new Integer(-1), IllegalArgumentException.class);
-        validateInput("time2X", new Integer(-1), IllegalArgumentException.class);
-        validateInput("time4X", new Integer(-1), IllegalArgumentException.class);
+        validateInput("takeoffDistance", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("landingDistance", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("time1X", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("time2X", Integer.valueOf(-1), IllegalArgumentException.class);
+        validateInput("time4X", Integer.valueOf(-1), IllegalArgumentException.class);
         
         try {
             assertNull(_fr.getBlockTime());
