@@ -39,8 +39,8 @@ public class TestIntersection extends AbstractBeanTestCase {
    }
    
    public void testValidation() {
-      validateInput("type", new Integer(-1), IllegalArgumentException.class);
-      validateInput("type", new Integer(11), IllegalArgumentException.class);
+      validateInput("type", Integer.valueOf(-1), IllegalArgumentException.class);
+      validateInput("type", Integer.valueOf(11), IllegalArgumentException.class);
       validateInput("name", "TEST", UnsupportedOperationException.class);
       try {
          _int.getName();
